[package]
name = "schema-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
convert_case = "0.6.0"
swc_common = { version = "0.29.31", features = ["tty-emitter"]}
swc_ecma_ast = "0.96.5"
swc_ecma_parser = "0.124.9"
swc_ecma_visit = "0.82.5"
